# review-classification

./: .gitignore  .pre-commit-config.yaml  README.md  claude.md  main.py  pyproject.toml
.github/workflows/: cd.yml  ci.yml  pypi_pub_to_test.yml
src/review_classification/: main.py
src/review_classification/analysis/: __init__.py  outlier_detector.py  statistics.py
src/review_classification/cli/: __init__.py  app.py  output.py  parser.py
src/review_classification/features/: __init__.py  engineering.py
src/review_classification/queries/: github_client.py
src/review_classification/sqlite/: database.py  models.py
tests/: test_integration.py  test_main.py  test_outlier_detection_integration.py
tests/analysis/: test_statistics.py
tests/cli/: test_parser.py
tests/features/: test_engineering.py
tests/queries/: test_github_client.py
